bk_ida/gccida/g2/mention_regs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/cse.c:1678:4: error: expected ';' after expression
rtx exp; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/cse.c:1698:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v25 = ( ( unsigned int)( mode_class_0[v27] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/cse.c:1726:22: error: expected identifier or '('
 struct cse_reg_info = cached_cse_reg_info; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/cse.c:1734:22: error: expected identifier or '('
 struct cse_reg_info = cached_cse_reg_info; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/cse.c:1739:64: error: expected ')'
if ( cached_regno == ( _DWORD)rtuint && (  struct cse_reg_info = cached_cse_reg_info) != 0LL ) 
                                                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/cse.c:1739:41: note: to match this '('
if ( cached_regno == ( _DWORD)rtuint && (  struct cse_reg_info = cached_cse_reg_info) != 0LL ) 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/cse.c:1739:87: error: expected expression
if ( cached_regno == ( _DWORD)rtuint && (  struct cse_reg_info = cached_cse_reg_info) != 0LL ) 
                                                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/cse.c:1758:2: error: expected expression
 struct cse_reg_info = v29; 
 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/cse.c:1762:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( rtuint); 
 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/cse.c:1863:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v41 = ( unsigned int)x[1]; 
                     ^~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/cse.c:1872:5: error: non-object type 'double (double)' is not assignable
exp = v42->exp; 
~~~ ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/cse.c:1878:32: error: member reference base type 'double (double)' is not a structure or union
|| ( v45.rtwint = ( __int64)exp->fld[0], *( _WORD *)v45.rtwint != 61) 
                            ~~~^ ~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/cse.c:1880:27: error: subscript of pointer to function type 'double (double)'
|| ( v46 = ( unsigned int)exp[1], v47 <= v46 + mode_size[*( ( unsigned __int8 *)exp + 2)] - 1) 
                          ^~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/cse.c:1920:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = (  struct rtx_def *)x[1]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/cse.c:1927:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = (  struct rtx_def *)x[1]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/cse.c:1933:27: error: expected expression
rehash_using_reg( *( rtx *)&x[1]); 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/cse.c:1969:29: error: expected expression
v3 |= mention_regs( *( rtx *)&rtwint[2 * v35 + 2]); 
                            ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/mention_regs/src/obj/cse.o] Error 1
